Removed Cert labels and typo

--- a/index.html
+++ b/index.html
@@ -79,8 +79,8 @@
                 <p>Work related achievements and professional references available upon request.</p>
                 <h3>Certifications</h3>
                 <h4>Microsoft</h4>
-                <p>Azure Fundimentals AZ-900: <a href="https://www.youracclaim.com/badges/1c6e2063-3a13-4688-a853-520813593208/linked_in_profile">
-                    <img border="0" alt="Azure Fundimentals AZ-900" src="images/azure-fundamentals-600x600.png" width="100" height="100"></p>
+                </p><a href="https://www.youracclaim.com/badges/1c6e2063-3a13-4688-a853-520813593208/linked_in_profile">
+                    <img border="0" alt="Azure Fundamentals AZ-900" src="images/azure-fundamentals-600x600.png" width="100" height="100"></p>
             </div>
         </section>
     </main>
